# taskmaster

./: .gitignore  Cargo.toml  README.md  taskmaster.yaml  tmp.rs
.github/workflows/: main.yaml
crates/commands/: Cargo.toml
crates/commands/src/: client_command.rs  client_commands.rs  lib.rs  server_command.rs  server_commands.rs
crates/connection/: Cargo.toml
crates/connection/src/: connection.rs  error.rs  lib.rs
crates/daemonize/: Cargo.toml
crates/daemonize/src/: daemonize.rs  error.rs  lib.rs
crates/libc/: Cargo.toml
crates/libc/src/: lib.rs  signal.rs  unistd.rs
crates/libc/src/sys/: types.rs
crates/rs42/: Cargo.toml  LICENSE-MIT  README.md
crates/rs42/.github/workflows/: main.yaml
crates/rs42/src/: lib.rs  result.rs  scope_guard.rs
daemon_init/: Cargo.toml
src/: client_handler.rs  error.rs  main.rs  parser.rs
src/parser/: mod.rs  parsed_program.rs  program.rs
src/task_server/: mod.rs  task_server.rs
src/task_server/client_handler/: client_handler.rs  mod.rs  test_utils.rs
taskmaster/: Cargo.toml  taskmaster_test.yaml
taskmaster/src/: error.rs  main.rs
taskmaster/src/client_handler/: error.rs  mod.rs  test_utils.rs
taskmaster/src/client_handler/commands_impl/: list_tasks.rs
taskmaster/src/config/: error.rs  mod.rs  program.rs  tests.rs
taskmaster/src/parser/: mod.rs  parsed_program.rs  program.rs
taskmaster/src/process_handler/: command.rs  handle.rs  message.rs  mod.rs  routine.rs  status.rs  tests.rs
taskmaster/src/server/: error.rs  mod.rs
taskmaster/src/task_manager/: mod.rs
taskmaster/src/task_server/: error.rs  mod.rs
taskmaster/src/task_server/client_handler/: client_handler.rs  test_utils.rs
taskmaster/src/task_server/client_handler/commands/: list_tasks.rs
taskmaster/src/tasks_manager/: api.rs  handle.rs  message.rs  mod.rs  process.rs  routine.rs  tests.rs
taskmaster/src/tasks_manager/error/: call_error.rs  cast_error.rs  mod.rs
tmcli/: Cargo.toml
tmcli/src/: main.rs  session.rs
tmcli/src/client/: command.rs  mod.rs  parsing.rs  session.rs
tmcli/src/commands/: command.rs  mod.rs  oneshot_command.rs  parsing.rs  placeholder.rs
tmcli/src/shell/: error.rs  mod.rs  shell.rs
(+11 files in other folders)
