[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/connection",
    "crates/daemonize",
    "crates/libc",
]

[dependencies]
daemonize = { path = "./crates/daemonize" }
connection = { path = "./crates/connection" }
tokio = { version = "1.43.0", features = ["full"] }
