[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
daemonize = { path = "../crates/daemonize" }
libc = { path = "../crates/libc" }
connection = { path = "../crates/connection" }
commands = { path = "../crates/commands" }

# External crates
tokio = { version = "1.43.1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
mockall = "0.13.1"
derive-getters = "0.5.0"
thiserror = "2.0.17"
